--- a/带部门岗位权限表设计.md
+++ b/带部门岗位权限表设计.md
@@ -1,10 +1,6 @@
 ## 带部门岗位权限表设计
 
-![image-20230601110237881](/Users/niko/Library/Application Support/typora-user-images/image-20230601110237881.png)
 
 
-
-
-
-
+![表结构图](image/image-20230601110237881.png)
 
